--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:postgresql://mepdb-h4qpqc:5432/mep
-spring.datasource.username=postgres
-spring.datasource.password=postgress2
+spring.datasource.url=jdbc:postgresql://${DB_PATH}:5432/mep
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_Pmep}
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
