--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:postgresql://${DB_PATH}:5432/mep
-spring.datasource.username=${DB_USER}
+spring.datasource.url=jdbc:postgresql://${DB_PATH}:5432/postgress2
 spring.datasource.password=${DB_PWD}
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+jakarta.persistence.schema-generation.create-source=metadata
+jakarta.persistence.schema-generation.drop-source=metadata
